- [Bugfix] Failure listing files with shortcut pointing to deleted file (Google Drive)
- [Bugfix] Allow configuration of path for Nextcloud & ownCloud connections (#11540)
- [Bugfix] Failure unlocking vaults on Google Storage (Cryptomator) (#11528)
- [Bugfix] Fix SSL session reuse on data channel (FTP, Windows)
- [Bugfix] Failure running application (CLI, Linux)

7.8.1
- [Feature] Provide armhf/aarch64 RPM and DEB packages (CLI, Rasperry Pi, Linux) (#10447)
- [Bugfix] Missing folers in directory listing (OneDrive, Sharepoint)
- [Bugfix] Interoperability with Tencent Cloud Object Storage (S3)
- [Bugfix] No file size displayed for files (Google Drive)

7.8.0
- [Feature] Connecting to different libraries (SharePoint) (#11043)
- [Feature] Default connection profile (Microsoft SharePoint Site) to connect so specific site (Sharepoint)  (#10115, #11375)
- [Feature] Create shared link for file (OneDrive, SharePoint) (#11373)
- [Feature] Updated toolbar icons in Preferencs window (macOS)
- [Bugfix] No attempt to authenticate using SSH agent (SFTP)
- [Bugfix] Allow browsing filenames containing forward slash (Google Drive)
- [Bugfix] Allow accessing shortcuts for files and folders (Google Drive)

7.7.2
- [Feature] Allow custom session duration for STS (S3) (#11265)
- [Feature] Support for PreferredAuthentications in OpenSSH configuration (SFTP) (#9964)
- [Bugfix] Exception reordering of bookmarks with drag and drop (macOS) (#11242)
- [Bugfix] Crash opening QuickLook panel (macOS) (#11212)
- [Bugfix] Temporary local file deleted after editing in external editor (#11086)
- [Bugfix] Include port number when saving host key fingerprint (SFTP, Windows) (#11255)

7.7.1
- [Bugfix] Workaround for crash on macOS 11 for some users (#11231)
- [Bugfix] Failure connecting through jump server with alias in configuration for target host (#11227)
- [Bugfix] Missing search field on macOS prior version 10.15 (#11234)

7.7.0