@@ -46,6 +46,7 @@
         ul li ul li {
             list-style-type: disc;
         }
+
     </style>
 </head>
 
@@ -89,6 +90,10 @@
     </li>
     <li><span class="label label-warning">Bugfix</span> Fix SSL session reuse on data channel (FTP, Windows)</li>
     <li><span class="label label-warning">Bugfix</span> Failure running application (CLI, Linux)</li>
+    <li><span class="label label-warning">Bugfix</span> Recursive search yields no results (Google Drive) (<a
+        target="_blank"
+        href="https://trac.cyberduck.io/ticket/11424">#11424</a>)
+    </li>
 </ul>
 
 <p>
